--- a/setka.html
+++ b/setka.html
@@ -1,62 +1,152 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Сайт-визитка</title>
+    <!-- Подключение Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Подключение иконок FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="kyle-reese.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Заголовок карточки</h5>
-                    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
-                    <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
-                  </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="sarah-connor.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Заголовок карточки</h5>
-                    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
-                    <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
-                  </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="terminator-t800.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Заголовок карточки</h5>
-                    <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
-                    <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
-                  </div>
-                </div>
+    <!-- Шапка сайта -->
+    <header class="bg-dark text-white py-3">
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center">
+                <h1 class="h4">Бизнес в Telegram</h1>
+                <nav>
+                    <ul class="nav">
+                        <li class="nav-item"><a class="nav-link text-white" href="#">Об авторе</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#">Услуги</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#">Контакты</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
+    </header>
 
-    </div>
+    <!-- Основной контент -->
+    <main class="container my-5">
 
+        <!-- Секция 1: Слайдер -->
+        <section class="mb-5">
+            <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/img1.jpg" class="d-block w-100" alt="Нейросети в городе">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/img2.jpg" class="d-block w-100" alt="Нейросети дома">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/img3.jpg" class="d-block w-100" alt="Нейросети на работе">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Предыдущий</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Следующий</span>
+                </button>
+            </div>
+        </section>
 
+        <!-- Секция 2: Карточки -->
+        <section class="mb-5">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="img/service1.jpg" class="card-img-top" alt="Услуга 1">
+                        <div class="card-body">
+                            <h5 class="card-title">Услуга 1</h5>
+                            <p class="card-text">Описание услуги по созданию контент-стратегий для бизнеса.</p>
+                            <a href="#" class="btn btn-primary">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="img/service2.jpg" class="card-img-top" alt="Услуга 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Услуга 2</h5>
+                            <p class="card-text">Информация о том, как нейросети могут автоматизировать задачи.</p>
+                            <a href="#" class="btn btn-primary">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card">
+                        <img src="img/service3.jpg" class="card-img-top" alt="Услуга 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Услуга 3</h5>
+                            <p class="card-text">Преимущества автоматизации и оптимизации бизнес-процессов.</p>
+                            <a href="#" class="btn btn-primary">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- Секция 3: Аккордеон -->
+        <section>
+            <div class="accordion" id="infoAccordion">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Часто задаваемые вопросы
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#infoAccordion">
+                        <div class="accordion-body">
+                            Здесь будет информация о часто задаваемых вопросах.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Пакеты услуг и цены
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#infoAccordion">
+                        <div class="accordion-body">
+                            Здесь будет информация о пакетах услуг и их стоимости.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Примеры успешных проектов
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#infoAccordion">
+                        <div class="accordion-body">
+                            Здесь будет информация о примерах успешных проектов.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
+    <!-- Футер -->
+    <footer class="bg-dark text-white py-3">
+        <div class="container text-center">
+            <p>Контактная информация: example@example.com</p>
+            <p>
+                <a href="#" class="text-white me-3"><i class="fab fa-telegram"></i> Telegram</a>
+                <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i> Instagram</a>
+                <a href="#" class="text-white"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+            </p>
+        </div>
+    </footer>
 
-
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Подключение Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
